Ajout des classes de base

--- a/francis-erwan-akka/pom.xml
+++ b/francis-erwan-akka/pom.xml
@@ -3,6 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>francis-erwan-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
 		<dependency>
@@ -13,4 +19,7 @@
 
 	</dependencies>
 	<groupId>akka</groupId>
+
+
+	
 </project>
