--- a/francis-erwan-akka/pom.xml
+++ b/francis-erwan-akka/pom.xml
@@ -9,6 +9,24 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath />
+                        <argument>francis.erwan.parent.AkkaQuickstart</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
 		<dependency>
